--- a/src/app/Pages/avion/avion.component.html
+++ b/src/app/Pages/avion/avion.component.html
@@ -21,81 +21,81 @@
             </td>
           </tr>
 
-          @if (showEditModal) {
-            <div class="modal">
-              <div class="modal-content">
-                <span class="closeBtn" (click)="isEditButtonClicked(selectedAvion)">&times;</span>
-                <h2>Modifier La ville</h2>
-                <br>
-                <form (ngSubmit)="modifierAvion(item)" class="form_content">
-                  <div>
-                    <label>Nom:</label>
-                    <br>
-                    <input type="text" [(ngModel)]="selectedAvion.nom" name="nom">
-                  </div>
-                  <div>
-                    <label>Matricule:</label>
-                    <br>
-                    <input type="text" [(ngModel)]="selectedAvion.matricule" name="matricule">
-                  </div>
-                  <div>
-                    <label>Statut:</label>
-                    <br>
-                    <input type="text" [(ngModel)]="selectedAvion.statut" name="statut">
-                  </div>
-                  <br>
-                  <button type="submit">Enregistrer</button>
-                </form>
-              </div>
-            </div>
-          }
-          @if (showDeletedModal) {
-            <div class="modal">
-              <div class="modal-content">
-                <span class="closeBtn" (click)="isDeleteButtonClicked(selectedAvion)">&times;</span>
-                <h2>Confirmer la suppression</h2>
-                <br>
-                <p>Voulez-vous vraiment supprimer cette ville?<br>
-                  <span style="color: var(--red);">Tous les Aeroports seront egalement supprimer.</span>
-                </p>
-                <br>
-                <br>
-                <button (click)="supprimerVille(selectedAvion)" class="modal_btn_del">Supprimer</button>
-                <button (click)="isDeleteButtonClicked(selectedAvion)" class="modal_btn_up">Annuler</button>
-              </div>
-            </div>
-          }
-          @if (showAddModal) {
-            <div class="modal">
-              <div class="modal-content">
-                <span class="closeBtn" (click)="IsAddAvionButtonClicked()">&times;</span>
-                <h2>Ajouter Une Ville</h2>
-                <br>
-                <form (ngSubmit)="ajouterAvion()" class="form_content">
-                  <div>
-                    <label>Nom:</label>
-                    <br>
-                    <input type="text" [(ngModel)]="avionToAdd.nom" name="nom">
-                  </div>
-                  <div>
-                    <label>Matricule:</label>
-                    <br>
-                    <input type="text" [(ngModel)]="avionToAdd.matricule" name="matricule">
-                  </div>
-                  <div>
-                    <label>Statut:</label>
-                    <br>
-                    <input type="text" [(ngModel)]="avionToAdd.statut" name="statut">
-                  </div>
-                  <br>
-                  <button type="submit">Enregistrer</button>
-                </form>
-              </div>
-            </div>
-          }
 
         }
       </tbody>
+      @if (showEditModal) {
+        <div class="modal">
+          <div class="modal-content">
+            <span class="closeBtn" (click)="isEditButtonClicked(selectedAvion)">&times;</span>
+            <h2>Modifier La ville</h2>
+            <br>
+            <form (ngSubmit)="modifierAvion(selectedAvion)" class="form_content">
+              <div>
+                <label>Nom:</label>
+                <br>
+                <input type="text" [(ngModel)]="selectedAvion.nom" name="nom">
+              </div>
+              <div>
+                <label>Matricule:</label>
+                <br>
+                <input type="text" [(ngModel)]="selectedAvion.matricule" name="matricule">
+              </div>
+              <div>
+                <label>Statut:</label>
+                <br>
+                <input type="text" [(ngModel)]="selectedAvion.statut" name="statut">
+              </div>
+              <br>
+              <button type="submit">Enregistrer</button>
+            </form>
+          </div>
+        </div>
+      }
+      @if (showDeletedModal) {
+        <div class="modal">
+          <div class="modal-content">
+            <span class="closeBtn" (click)="isDeleteButtonClicked(selectedAvion)">&times;</span>
+            <h2>Confirmer la suppression</h2>
+            <br>
+            <p>Voulez-vous vraiment supprimer cette ville?<br>
+              <span style="color: var(--red);">Tous les Aeroports seront egalement supprimer.</span>
+            </p>
+            <br>
+            <br>
+            <button (click)="supprimerVille(selectedAvion)" class="modal_btn_del">Supprimer</button>
+            <button (click)="isDeleteButtonClicked(selectedAvion)" class="modal_btn_up">Annuler</button>
+          </div>
+        </div>
+      }
+      @if (showAddModal) {
+        <div class="modal">
+          <div class="modal-content">
+            <span class="closeBtn" (click)="IsAddAvionButtonClicked()">&times;</span>
+            <h2>Ajouter Une Ville</h2>
+            <br>
+            <form (ngSubmit)="ajouterAvion()" class="form_content">
+              <div>
+                <label>Nom:</label>
+                <br>
+                <input type="text" [(ngModel)]="avionToAdd.nom" name="nom">
+              </div>
+              <div>
+                <label>Matricule:</label>
+                <br>
+                <input type="text" [(ngModel)]="avionToAdd.matricule" name="matricule">
+              </div>
+              <div>
+                <label>Statut:</label>
+                <br>
+                <input type="text" [(ngModel)]="avionToAdd.statut" name="statut">
+              </div>
+              <br>
+              <button type="submit">Enregistrer</button>
+            </form>
+          </div>
+        </div>
+      }
 
     </table>
   </div>
