--- a/src/app/Pages/avion/siege/siege-card/siege-card.component.html
+++ b/src/app/Pages/avion/siege/siege-card/siege-card.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="container">
+<div class="container" [ngClass]="{'affaire': siege.positionSiege.classeSiege.nom=='AFFAIRE', 'nondisponible': siege.disponibilite == SiegeDisponibilite.NON}">
   <div class="chair" (click)="isSiegeClicked()" (mouseenter)="showSiegeInfo()" (mouseleave)="showSiegeInfo()">
     <div class="headrest"></div>
     <div class="seat"></div>
