Mise de certaines restrictions

--- a/src/app/Pages/compagnie/admincompagnie/admincompagnie.component.html
+++ b/src/app/Pages/compagnie/admincompagnie/admincompagnie.component.html
@@ -95,7 +95,7 @@
                 <div>
                   <label>Nom:</label>
                   <br>
-                  <input type="text" [(ngModel)]="admincompagnieToAdd.nom" name="nom">
+                  <input type="text" [(ngModel)]="admincompagnieToAdd.nom" name="nom" required>
                 </div>
                 <div>
                   <label>Prenom:</label>
