--- a/src/app/Pages/superadmin/superadmin.component.html
+++ b/src/app/Pages/superadmin/superadmin.component.html
@@ -94,7 +94,7 @@
                 <div>
                   <label>Nom:</label>
                   <br>
-                  <input type="text" [(ngModel)]="superadminToAdd.nom" name="nom">
+                  <input required type="text" [(ngModel)]="superadminToAdd.nom" name="nom">
                 </div>
                 <div>
                   <label>Prenom:</label>
